crates/noaa-weather-cli/src/output/render/snapshots/noaa_weather_cli__output__render__tests__raw_gridpoint.snap
---
source: crates/noaa-weather-cli/src/output/render/tests.rs
expression: "options(ColorMode::Never,\n100).render(&gridpoint.summarize(&SummaryOptions::default()))"
---
Gridpoint TOP/31,80
Issued by TOP

┌───────────┬───────────────────────────────────────────────────┐
│ Updated   ┆ 2026-09-02 06:26 +00:00                           │
│ Covers    ┆ 2026-09-02 00:00 +00:00 – 2026-09-10 01:00 +00:00 │
│ Elevation ┆ 1499 ft                                           │
│ Grid cell ┆ TOP/31,80                                         │
└───────────┴───────────────────────────────────────────────────┘

Layers
┌────────────────────────────┬──────┬────────┬───────────────────────────────────────┬─────────────┐
│ Layer                      ┆ Unit ┆ Values ┆ Covers                                ┆ First value │
╞════════════════════════════╪══════╪════════╪═══════════════════════════════════════╪═════════════╡
│ temperature                ┆ °F   ┆    164 ┆ 2026-09-02 00:00 +00:00 – 2026-09-10  ┆       92 °F │
│                            ┆      ┆        ┆ 01:00 +00:00                          ┆             │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ dewpoint                   ┆ °F   ┆     61 ┆ 2026-09-02 00:00 +00:00 – 2026-09-10  ┆       62 °F │
│                            ┆      ┆        ┆ 01:00 +00:00                          ┆             │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ maxTemperature             ┆ °F   ┆      9 ┆ 2026-09-02 00:00 +00:00 – 2026-09-10  ┆       99 °F │
│                            ┆      ┆        ┆ 02:00 +00:00                          ┆             │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ minTemperature             ┆ °F   ┆      8 ┆ 2026-09-02 01:00 +00:00 – 2026-09-09  ┆       75 °F │
│                            ┆      ┆        ┆ 15:00 +00:00                          ┆             │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ relativeHumidity           ┆ %    ┆    163 ┆ 2026-09-02 00:00 +00:00 – 2026-09-10  ┆         37% │
│                            ┆      ┆        ┆ 01:00 +00:00                          ┆             │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ apparentTemperature        ┆ °F   ┆    155 ┆ 2026-09-02 00:00 +00:00 – 2026-09-10  ┆       93 °F │
│                            ┆      ┆        ┆ 01:00 +00:00                          ┆             │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ wetBulbGlobeTemperature    ┆ °F   ┆    146 ┆ 2026-09-02 00:00 +00:00 – 2026-09-10  ┆       79 °F │
│                            ┆      ┆        ┆ 01:00 +00:00                          ┆             │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ heatIndex                  ┆ °F   ┆    155 ┆ 2026-09-02 00:00 +00:00 – 2026-09-10  ┆       93 °F │
│                            ┆      ┆        ┆ 01:00 +00:00                          ┆             │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ windChill                  ┆ °F   ┆      1 ┆ 2026-09-02 00:00 +00:00 – 2026-09-10  ┆         N/A │
│                            ┆      ┆        ┆ 01:00 +00:00                          ┆             │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ skyCover                   ┆ %    ┆     98 ┆ 2026-09-02 00:00 +00:00 – 2026-09-10  ┆          4% │
│                            ┆      ┆        ┆ 06:00 +00:00                          ┆             │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ windDirection              ┆ °    ┆     73 ┆ 2026-09-02 00:00 +00:00 – 2026-09-10  ┆       170 ° │
│                            ┆      ┆        ┆ 01:00 +00:00                          ┆             │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ windSpeed                  ┆ mph  ┆     64 ┆ 2026-09-02 00:00 +00:00 – 2026-09-10  ┆      10 mph │
│                            ┆      ┆        ┆ 01:00 +00:00                          ┆             │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ windGust                   ┆ mph  ┆     93 ┆ 2026-09-02 00:00 +00:00 – 2026-09-10  ┆      13 mph │
│                            ┆      ┆        ┆ 01:00 +00:00                          ┆             │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ heatRisk                   ┆ N/A  ┆      3 ┆ 2026-09-02 00:00 +00:00 – 2026-09-10  ┆           4 │
│                            ┆      ┆        ┆ 06:00 +00:00                          ┆             │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ probabilityOfPrecipitation ┆ %    ┆     47 ┆ 2026-09-02 00:00 +00:00 – 2026-09-10  ┆          0% │
│                            ┆      ┆        ┆ 06:00 +00:00                          ┆             │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ quantitativePrecipitation  ┆ in   ┆     33 ┆ 2026-09-02 00:00 +00:00 – 2026-09-10  ┆     0.00 in │
│                            ┆      ┆        ┆ 06:00 +00:00                          ┆             │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ iceAccumulation            ┆ in   ┆     32 ┆ 2026-09-02 00:00 +00:00 – 2026-09-10  ┆     0.00 in │
│                            ┆      ┆        ┆ 00:00 +00:00                          ┆             │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ snowfallAmount             ┆ in   ┆     32 ┆ 2026-09-02 00:00 +00:00 – 2026-09-10  ┆     0.00 in │
│                            ┆      ┆        ┆ 00:00 +00:00                          ┆             │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ceilingHeight              ┆ ft   ┆      1 ┆ 2026-09-02 00:00 +00:00 – 2026-09-03  ┆         N/A │
│                            ┆      ┆        ┆ 10:00 +00:00                          ┆             │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ visibility                 ┆ mi   ┆      1 ┆ 2026-09-02 00:00 +00:00 – 2026-09-03  ┆     10.0 mi │
│                            ┆      ┆        ┆ 10:00 +00:00                          ┆             │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ transportWindSpeed         ┆ mph  ┆     84 ┆ 2026-09-02 00:00 +00:00 – 2026-09-10  ┆      15 mph │
│                            ┆      ┆        ┆ 01:00 +00:00                          ┆             │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ transportWindDirection     ┆ °    ┆    111 ┆ 2026-09-02 00:00 +00:00 – 2026-09-10  ┆       180 ° │
│                            ┆      ┆        ┆ 01:00 +00:00                          ┆             │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ mixingHeight               ┆ ft   ┆    187 ┆ 2026-09-02 00:00 +00:00 – 2026-09-10  ┆     1401 ft │
│                            ┆      ┆        ┆ 01:00 +00:00                          ┆             │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ grasslandFireDangerIndex   ┆ N/A  ┆      2 ┆ 2026-09-02 00:00 +00:00 – 2026-09-03  ┆           0 │
│                            ┆      ┆        ┆ 03:00 +00:00                          ┆             │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ probabilityOfThunder       ┆ %    ┆     44 ┆ 2026-09-02 00:00 +00:00 – 2026-09-10  ┆          0% │
│                            ┆      ┆        ┆ 00:00 +00:00                          ┆             │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ redFlagThreatIndex         ┆ N/A  ┆      1 ┆ 2026-09-02 00:00 +00:00 – 2026-09-07  ┆           0 │
│                            ┆      ┆        ┆ 11:00 +00:00                          ┆             │
└────────────────────────────┴──────┴────────┴───────────────────────────────────────┴─────────────┘

Hazards
┌───────────────────────────────────────────────────┬───────────────┐
│ When                                              ┆ Hazard        │
╞═══════════════════════════════════════════════════╪═══════════════╡
│ 2026-09-02 18:00 +00:00 – 2026-09-05 01:00 +00:00 ┆ Heat Advisory │
└───────────────────────────────────────────────────┴───────────────┘

Weather
┌───────────────────────────────────────────────────┬─────────────────────────────────────┐
│ When                                              ┆ Expected                            │
╞═══════════════════════════════════════════════════╪═════════════════════════════════════╡
│ 2026-09-06 12:00 +00:00 – 2026-09-06 18:00 +00:00 ┆ Slight chance of light rain showers │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ 2026-09-07 06:00 +00:00 – 2026-09-07 12:00 +00:00 ┆ Slight chance of thunderstorms      │
│                                                   ┆ Slight chance of light rain showers │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ 2026-09-08 06:00 +00:00 – 2026-09-08 12:00 +00:00 ┆ Slight chance of thunderstorms      │
│                                                   ┆ Slight chance of light rain showers │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ 2026-09-09 00:00 +00:00 – 2026-09-09 06:00 +00:00 ┆ Slight chance of light rain showers │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ 2026-09-09 06:00 +00:00 – 2026-09-09 12:00 +00:00 ┆ Slight chance of thunderstorms      │
│                                                   ┆ Slight chance of light rain showers │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ 2026-09-09 12:00 +00:00 – 2026-09-10 00:00 +00:00 ┆ Slight chance of light rain showers │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ 2026-09-10 00:00 +00:00 – 2026-09-10 01:00 +00:00 ┆ Chance of light rain showers        │
└───────────────────────────────────────────────────┴─────────────────────────────────────┘

note: 31 layers have no values for this grid
